--- a/code/home.html
+++ b/code/home.html
@@ -2,16 +2,162 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Meal Finder</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+    /* Hedaing starting */
+    html, body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    }
+
+    header {
+    background-color: orangered;
+    height: 7vh;
+    padding: 13px 0px 0px 0px;
+    }
+    .header_home_heading{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0px 10px;
+        font-size: 30px;
+        color: white;
+    }
+    .header_home_heading a{
+        text-decoration: none;
+        color: white;
+    }
+    .header_home_heading span{
+        padding-left: 10px;
+    }
+    .header_heading_slider{
+        background-color: white;
+        display: none;
+        text-align: start;
+        justify-content: space-evenly;
+        flex-direction: column;
+        position: fixed;
+        top: 0%;
+        right: 0%;
+        width: 250px;
+        z-index: 999;
+    }
+    .fa-xmark{
+        padding-top: 20px;
+    }
+    /* heading ending */
+    /* Main Page Starting */
+    .main_heading_content_container{
+        background-color: rgba(0, 0, 0, 0.580);
+        width: 100%;
+        height: 100%;
+    }
+    .main_heading_container{
+        background-image: url(../media/pexels-enginakyurt-1435895.jpg);
+        width: 100%;
+        height:550px;
+        object-fit:cover;
+        background-repeat: no-repeat;
+        background-size: cover; 
+        position: relative;
+    }
+    .main_heading_searchbar_content_container{
+        position: absolute;
+        top: 30%;
+        left: 33%;
+    }
+    .main_heading_text_content_container{
+        position: absolute;
+        top: 40%;
+        left: 23%;
+    }
+    .main_heading_content_container input{
+        width: 400px;
+        height: 55px;
+        border: none;
+        border-radius:90px;
+        padding-left: 50px;
+        font-size: 25px;
+    }
+    .main_heading_content_container button{
+        background-color: orangered;
+        border: 0.5px solid white;
+        border-radius: 90px;
+        font-size: 25px;
+        height: 50px;
+        width: 50px;
+        color: white;
+    }
+    .main_heading_searchbar_content_container{
+        display: flex;
+        justify-content:baseline;
+        align-items: center;
+        gap: 10px;
+    }
+    .main_heading_text_content_container h2{
+        font-size: 60px;
+        font-family: "Bebas Neue", sans-serif;
+        margin-bottom: 0%;
+        color: white;
+    }
+    .main_heading_text_content_container p{
+        color: white;
+        font-size: 25px;
+        padding-left: 210px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        word-spacing: 15px;
+    }
+    </style>
 </head>
 <body>
-    
-    
+    <!-- Header Starting -->
+<header>
+    <!-- Main Heading Header -->
+    <div class="header_home_heading">
+        <a href="#"><i class="fa-solid fa-house"></i><span class="header_heading">MEAL FINDER</span></a>
+        <span onclick=showSlider()><i class="fa-solid fa-bars"></i></span>
+    </div>
+    <!-- Slider -->
+    <div class="header_heading_slider">
+        <span onclick=hiddenSlider()><i class="fa-solid fa-xmark"></i></span>
+        <a href="#">Beef</a>
+        <a href="#">Chicken</a>
+        <a href="#">Dessert</a>
+        <a href="#">Lamb</a>
+        <a href="#">Miscellaneous</a>
+        <a href="#">Pasta</a>
+        <a href="#">Pork</a>
+        <a href="#">Seafood</a>
+        <a href="#">Side</a>
+        <a href="#">Starter</a>
+        <a href="#">Vegan</a>
+        <a href="#">Vegetarian</a>
+        <a href="#">Breakfast</a>
+        <a href="#">Goat</a>
+    </div>
+</header>
+<!-- Header ending -->
+
+<!-- Maing heading page starting -->
+<section class="main_heading_container">
+    <!-- Search Bar -->
+    <div class="main_heading_content_container">
+        <div class="main_heading_searchbar_content_container">
+            <input type="text" name="search_bar" id="search_bar" placeholder="Search recipes here ...">
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+        <div class="main_heading_text_content_container">
+            <h2>What are your favorite cuisines?</h2>
+            <p>PERSONALIZE YOUR EXPERIENCE</p>
+        </div>
+    </div>
+</section>
 
     <script src="./app.js"></script>
 </body>
