Slide Link Beef Upadating

--- a/code/home.html
+++ b/code/home.html
@@ -22,21 +22,7 @@
     <!-- Slider -->
     <div class="header_heading_slider">
         <span onclick=hiddenSlider()><i class="fa-regular fa-circle-xmark"></i></span>
-        <ul>
-            <li>Beef</li>
-            <li>Chicken</li>
-            <li>Dessert</li>
-            <li>Lamb</li>
-            <li>Miscellaneous</li>
-            <li>Pasta</li>
-            <li>Pork</li>
-            <li>Seafood</li>
-            <li>Side</li>
-            <li>Starter</li>
-            <li>Vegan</li>
-            <li>Vegetarian</li>
-            <li>Breakfast</li>
-            <li>Goat</li>
+        <ul id="sliderlinks">
         </ul>
     </div>
 </header>
@@ -58,10 +44,14 @@
 </section>
 
 <!-- Categories Container Starting -->
-<section class="categoriesContainer">
+<section id="categoriesContainer">
     <h3>CATEGORIES</h3>
     <div id="categoriesContainerContent">
     </div>
+</section>
+<!-- Beef Description Container -->
+<section>
+    <div id="beefcategoriescontainer"></div>
 </section>
 
     <script src="./app.js"></script>
