--- a/code/home.html
+++ b/code/home.html
@@ -49,7 +49,7 @@
             left:21px;
             top:70px;
         }
-        #mealscategoriescards {
+        #mealscategoriescards{
             display: flex;
             justify-content: baseline;
             align-items: flex-start;
@@ -81,6 +81,9 @@
             font-size: 16px;
         }
         /* item Container Ending */
+        #melasSection{
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -106,13 +109,18 @@
     <div class="main_heading_content_container">
         <div class="main_heading_searchbar_content_container">
             <input type="text" name="search_bar" id="search_bar" placeholder="Search recipes here ...">
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <button onclick=searchMelas()><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <div class="main_heading_text_content_container">
             <h2>What are your favorite cuisines?</h2>
             <p>PERSONALIZE YOUR EXPERIENCE</p>
         </div>
     </div>
+</section>
+
+<section id="melasSection">
+    <p id="melasSearchheading">Meals</p>
+    <div id="melasSearchDivistion"></div>
 </section>
 
 <!-- Categories Container Starting -->
@@ -129,8 +137,6 @@
     <div id="mealscategoriescards">
     </div>
 </section>
-
-
     <script src="./app.js"></script>
 </body>
 </html>
