--- a/code/home.html
+++ b/code/home.html
@@ -8,227 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <style>
-        /* item Container Starting*/
-        #itemandmealscategories{
-            display: none;
-        }
-        #itemandmealscategories h3,#mealscategoriescards{
-            padding: 20px;
-        }
-        #itemcategoriescontainer{
-            border: 1px solid red;
-            margin: 20px 20px 40px 20px;
-            padding: 10px;
-        }
-        .descriptionItemName{
-            color: red;
-        }
-        #itemcategoriescontainer{
-            font-size: 25px;
-        }
-        .descriptionItemName{
-            font-size: 30px;
-        }
-        /* Meals Container */
-        #melasheading{
-            position: relative;
-        }
-        #melasheading h3{
-            font-size: 30px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            letter-spacing: 15px;
-            font-weight:700;
-        }
-        #melasheading h3::after{
-            content: "";
-            width: 120px;
-            height: 5px;
-            background-color: orangered;
-            position: absolute;
-            left:21px;
-            top:70px;
-        }
-        #mealscategoriescards{
-            display: flex;
-            justify-content: baseline;
-            align-items: flex-start;
-            flex-wrap: wrap;
-            gap: 25px;
-        }
-
-        .mealscategories {
-            width: 18.6%;
-            height: 300px;
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            border-radius: 5px;
-            box-shadow: 1px 2.5px 5px rgba(0, 0, 0, 0.568);
-        }
-
-        .mealscategories img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            display: block;
-        }
-
-        .mealscategories p {
-            padding: 10px;
-            font-size: 16px;
-        }
-        /* item Container Ending */
-        /* Meals Of Searech Items Container Starting */
-        #melasSection{
-            display: none;
-            margin:0px 20px 0px 20px;
-            position: relative;
-        }
-        #melasSearchDivistion{
-            display: flex;
-            justify-content: baseline;
-            align-items: flex-start;
-            flex-wrap: wrap;
-            gap: 25px;
-        }
-        .melas_card{
-            width: 18.5%;
-            height: 340px;
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-            align-items: start;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            border-radius: 5px;
-            box-shadow: 1px 2.5px 5px rgba(0, 0, 0, 0.568);
-        }
-        .melas_card img{
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            display: block;
-        }
-        .mealsarea,.mealsname{
-            margin:5px 0px 0px 10px;
-            font-size: 25px;
-            text-align: start;
-            font-weight: 600;
-        }
-        .mealsarea{
-            color:rgba(128, 128, 128, 0.692);
-        }
-        .melas_card{
-            position: relative;
-        }
-        .mealscategoryname{
-            font-size: 16px;
-            position: absolute;
-            top: 0%;
-            right: 0%;
-            background-color: white;
-            padding: 10px 20px 10px 20px;
-            margin: 5px;
-            border-radius: 90px;
-            color: orangered;
-        }
-        .mealsHeadingOfSearchItems{
-            font-size: 35px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            letter-spacing: 15px;
-            font-weight:700;
-            margin-bottom: 50px;
-        }
-        .mealsHeadingOfSearchItems::after{
-            content: "";
-            width: 120px;
-            height: 5px;
-            background-color: orangered;
-            position: absolute;
-            top:50px;
-            left: 0%;
-        }
-        /* Meals Of Searech Items Container Ending */
-        #containerOfRecipes{
-            background-color: rgb(245, 245, 245);
-            margin: 0px 20px 0px 20px;
-        }
-        .recipesalldetailscontainer{
-            background-color: white ;
-            padding: 25px;
-        }
-        .navativebarofrecipes{
-            background-color: orangered;
-            height: 50px;
-            color: white;
-            font-size: 20px;
-            margin-top: 20px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            padding-left: 20px;
-        }
-        .recipesMealdetailas{
-            font-size: 22px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            letter-spacing: 10px;
-            font-weight:600;
-            position: relative; 
-        }
-        .recipesMealdetailas::after{
-            content: "";
-            width: 130px;
-            height: 5px;
-            background-color: orangered;
-            position: absolute;
-            top:50px;
-            left: 0%;
-        }
-        .recipesImgandingredientsContainer{
-            display: flex;
-            justify-content: baseline;
-            flex-wrap:wrap;
-            align-items: start;
-            gap: 30px;
-        }
-        .recipesImgandingredientsContainer img{
-            width:500px;
-        }
-        .recipesname{
-            font-size: 45px;
-            color: orangered;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: 400;
-            margin: 0%;
-        }
-        .recipesdetailscontainer{
-            padding: 0%;
-        }
-        .recipesdetailscontainer hr{
-            height: 2px;
-            background-color: orangered;
-            border: none;
-        }
-        .darkNames{
-            font-weight: bold;
-        }
-        .categorynameofrecipes{
-            font-size:25px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        .sourceofrecipes,.tagnameofrecipes{
-            font-size: 25px;
-        }
-        .colouredtext{
-            border: 1px solid orangered;
-            padding: 5px;
-            color: orangered;
-            margin-left: 10px;
-            border-radius: 2px;
-        }
-    </style>
 </head>
 <body>
     <!-- Header Starting -->
@@ -263,7 +42,7 @@
 </section>
 
 <section id="melasSection">
-    <p class="mealsHeadingOfSearchItems">MEALS</p>
+    <div id="teyhidden"><p class="mealsHeadingOfSearchItems">MEALS</p></div>
     <div id="melasSearchDivistion"></div>
 </section>
 <!-- Recipes Container Starting -->
